added check for existing email

--- a/src/app/pages/profile/edit-profile/edit-profile.component.html
+++ b/src/app/pages/profile/edit-profile/edit-profile.component.html
@@ -160,6 +160,10 @@
             profileFormControls.email.dirty">
               Email required
             </p>
+            <p class="error-message" *ngIf="profileFormControls.email.hasError('canUseEmail') &&
+            profileFormControls.email.dirty">
+              Can't use this email
+            </p>
           </div>
 
           <div class="form-button-container">
