user can no longer use other people's email address

--- a/src/app/pages/profile/edit-profile/edit-profile.component.html
+++ b/src/app/pages/profile/edit-profile/edit-profile.component.html
@@ -164,11 +164,15 @@
             profileFormControls.email.dirty">
               Can't use this email
             </p>
+            <p class="error-message" *ngIf="profileFormControls.email.hasError('pattern') &&
+            profileFormControls.email.dirty">
+              Invalid email format
+            </p>
           </div>
 
           <div class="form-button-container">
             <app-custom-button [buttonLabel]="submitButtonText" [isLoading]="isLoading"
-              [isDisabled]="isProfileSaveButtonDisabled" size="small">
+              [isDisabled]="profileForm.invalid" size="small">
             </app-custom-button>
           </div>
         </form>
