--- a/src/assets/styles/_colors.scss
+++ b/src/assets/styles/_colors.scss
@@ -105,8 +105,8 @@ $custom-input-color-dark: white;
 // * Custom button
 $custom-button-border: 1px solid rgba(0, 0, 0, 0.12);
 $custom-button-border-dark: 1px solid rgba(255, 255, 255, 0.3);
-$button-text-color-disabled: inherit;
-$button-text-color-disabled-dark: white;
+$button-text-color-disabled: grey;
+$button-text-color-disabled-dark: grey;
 
 // * Divider
 $atc-divider: #dee8ff;
