added overflow to description for instances of weirdly long text

--- a/src/app/components/resource/resource.component.scss
+++ b/src/app/components/resource/resource.component.scss
@@ -59,6 +59,10 @@
     line-height: 20px;
     height: 100px;
 
+    p {
+      overflow-x: hidden;
+    }
+
     .type {
       margin-left: 0;
     }
