--- a/src/app/components/dialogs/atc/atc.component.scss
+++ b/src/app/components/dialogs/atc/atc.component.scss
@@ -75,7 +75,6 @@ h6 {
   }
 
   .right {
-    max-width: 400px;
     img {
       display: block;
       width: 100%;
@@ -130,6 +129,6 @@ h6 {
 
 @media (min-width: 768px) {
   .columns {
-    grid-template-columns: 1fr 2px 1fr;
+    grid-template-columns: 1fr 2px min-content;
   }
 }
